<resources>
    <string name="app_name">PADC-F-TMN-CURIOSITY</string>
    <string name="action_settings">Settings</string>
    <string name="facebook">Sign In With<b> Facebook</b></string>
    <string name="google">Sign In With<b> Google</b></string>
    <string name="twitter">Sign In With<b> Twitter</b></string>
    <string name="signUp"><b>Sign Up</b> with Email</string>
    <string name="signIn"><b>Sign In</b> with Email</string>
</resources>
